--- a/contact.html
+++ b/contact.html
@@ -1,1 +1,19 @@
-Email: info.fldigital@gmail.com
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contact Us</title>
+</head>
+<body>
+    <h1>Contact Us</h1>
+    <p>If you have any questions or would like to reach out, feel free to email us at:</p>
+    
+    <!-- Add the email address -->
+    <p>Email: <a href="info.fldigital@gmail.com">youremail@example.com</a></p>
+
+    <a href="index.html">Go back to Home</a>
+</body>
+</html>
+
+Email: 
