--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
     <p>If you have any questions or would like to reach out, feel free to email us at:</p>
     
     <!-- Add the email address -->
-    <p>Email: <a href="info.fldigital@gmail.com">youremail@example.com</a></p>
+    <p>Email: <a href="info.fldigital@gmail.com">info.fldigital@gmail.com</a></p>
 
     <a href="index.html">Go back to Home</a>
 </body>
